--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
         "canister_call_set_message": "dfx canister call rental-bicycle setMessage '(\"Hello world!\")'"
     },
     "dependencies": {
-        "azle": "0.19.0",
-        "uuid": "^9.0.1"
+        "@dfinity/agent": "^0.15.6",
+        "@dfinity/candid": "^0.15.6",
+        "azle": "^0.16.3",
+        "uuid": "^9.0.0"
+    },
+    
+    "devDependencies": {
+        "@types/uuid": "^9.0.2"
     }
 }
